<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/list_of_quizzess_edit"
        android:onClick="editQuiz"
        android:id="@+id/btnEdit"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/list_of_quizzess_delete"
        android:onClick="deleteQuiz"
        android:id="@+id/btnDelete"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/list_of_quizzess_upload"
        android:onClick="uploadToServer"
        android:id="@+id/btnUploadToserver"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/list_of_quizzess_cancel"
        android:onClick="cancelDialog"
        android:id="@+id/btnCancel"
        android:layout_gravity="center_horizontal" />
</LinearLayout>