<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:id="@+id/etQuizKey"
        android:hint="@string/quiz_user_pop_up_edit_text" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quiz_user_pop_up_retrieve_button"
        android:id="@+id/btnRetrieve"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quiz_user_pop_up_cancel_button"
        android:id="@+id/btnConfirmationCancel" />
</LinearLayout>