<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/list_of_questions_edit"
        android:onClick="editQuestion"
        android:id="@+id/btnEdit"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/list_of_questions_delete"
        android:onClick="deleteQuestion"
        android:id="@+id/btnDelete"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/list_of_questions_cancel"
        android:onClick="cancelDialog"
        android:id="@+id/btnCancel"
        android:layout_gravity="center_horizontal" />
</LinearLayout>