<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/list_of_questions_empty"
        android:id="@+id/tvThereAreNoQuestions"
        android:textAlignment="center"
        android:textStyle="bold"
        android:visibility="gone" />

    <ListView
        android:id="@+id/lvListOfQuestions"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </ListView>

    <Button
        android:id="@+id/btnCreateQuestion"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/list_of_questions_add_button"
        android:onClick="addQuestion"
        />
    <Button
        android:id="@+id/btnPrevius"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_button"
        android:onClick="previusActivty"
        />
</LinearLayout>