<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/list_of_quizzess_delete_alert"
        android:id="@+id/tvConfirmationDialog"
        android:layout_gravity="center_horizontal" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_of_quizzess_delete_alert_yes"
            android:id="@+id/btnConfirmationYes"
            android:layout_marginLeft="91dp"
            android:layout_marginStart="91dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_of_quizzess_delete_alert_no"
            android:id="@+id/btnConfirmationNo"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/btnConfirmationYes"
            android:layout_toEndOf="@+id/btnConfirmationYes" />

    </RelativeLayout>

</LinearLayout>